compiler/acton/test/syntaxerrors/err24.act
# Double colon in type annotation
def typed_func() :: int:
    return 42